[project]
name = "flexpolicy"
version = "0.1.0"
description = ""
authors = [
    {name = "Maaz",email = "mail.maaz@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "supabase (>=2.16.0,<3.0.0)",
    "openai (>=1.25,<2)",
    "sse-starlette (>=2.3.6,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (<0.27)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
